--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1</version>
+			<version>1.0.0.BETA1-CP1</version>
 		</dependency>			
 		<dependency>				
 			<groupId>org.mobicents.resources</groupId>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
