--- a/sip-servlets-examples/jslee-sips-interop/sips/business/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/business/pom.xml
@@ -8,12 +8,9 @@
 		<artifactId>jslee-sips-interop-demo-sips-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>jslee-sips-interop-demo-sips-business</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
 	<name>SIPS Business part of the JSLEE-SIPS Demo</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
@@ -41,28 +38,28 @@
 		<dependency>
 			<groupId>javax.slee</groupId>
 			<artifactId>jain-slee</artifactId>
-			<version>1.1.draft</version>	
+			<version>${jain-slee.version}</version>	
 			<scope>provided</scope>		
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- logging dependency -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>${log4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
-		</dependency>		
+		</dependency>	
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-ejb_3.0_spec</artifactId>
@@ -78,20 +75,20 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
-			<version>2.0.1.GA</version>
+			<version>${jboss-seam.version}</version>
 			<scope>provided</scope>
 		</dependency>		
 		<!-- media deps -->
 		<dependency>
-			<groupId>org.mobicents.media</groupId>
-			<artifactId>mscontrol</artifactId>
-			<version>1.0-ALPHA</version>
+			<groupId>org.mobicents.servers.media</groupId>
+			<artifactId>mobicents-server-media-mscontrol</artifactId>
+			<version>1.0.0.BETA1-CP1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.external.freetts</groupId>
 			<artifactId>freetts</artifactId>
-			<version>1.0</version>
+			<version>${freetts.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -140,41 +137,6 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>			
-		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
+		</plugins>		
 	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
