--- a/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
@@ -8,18 +8,15 @@
 		<artifactId>jslee-sips-interop-demo-sips-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>jslee-sips-interop-demo-sips-ear</artifactId>
 	<packaging>ear</packaging>
-	<version>1.0</version>
 	<name>SIPS EAR of the JSLEE-SIPS Demo</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- j2ee dependencies -->
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
-			<version>2.0.1.GA</version>
+			<version>${jboss-seam.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>jboss</groupId>
@@ -40,7 +37,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-el</artifactId>
-			<version>2.0.0.GA</version>
+			<version>${jboss-el.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.el</groupId>
@@ -78,7 +75,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>3.3.0.ga</version>
+			<version>${hibernate-common-annotations.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.hibernate</groupId>
@@ -171,40 +168,5 @@
 				</executions>
 			</plugin>	
 		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
 	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
