--- a/sip-servlets-examples/jslee-sips-interop/sips/web/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/web/pom.xml
@@ -8,12 +8,9 @@
 		<artifactId>jslee-sips-interop-demo-sips-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>jslee-sips-interop-demo-sips-web</artifactId>
 	<packaging>war</packaging>
-	<version>1.0</version>
 	<name>SIPS Webapp of the JSLEE-SIPS Demo</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
@@ -42,20 +39,20 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- logging dependency -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>${log4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Media dependencies -->
@@ -98,41 +95,4 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-	<build>		
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
-	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
