--- a/sip-servlets-examples/shopping-demo/ear/pom.xml
+++ b/sip-servlets-examples/shopping-demo/ear/pom.xml
@@ -8,18 +8,15 @@
 		<artifactId>shopping-demo-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>shopping-demo-ear</artifactId>
 	<packaging>ear</packaging>
-	<version>1.0</version>
 	<name>Shopping Demo EAR</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<!-- j2ee dependencies -->
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
-			<version>2.0.1.GA</version>
+			<version>${jboss-seam.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>jboss</groupId>
@@ -40,7 +37,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-el</artifactId>
-			<version>2.0.0.GA</version>
+			<version>${jboss-el.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.el</groupId>
@@ -76,13 +73,13 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>2.3.0</version>
+			<version>${lucene-core.version}</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>3.3.0.ga</version>
+			<version>${hibernate-common-annotations.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.hibernate</groupId>
@@ -98,7 +95,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-search</artifactId>
-			<version>3.0.0.GA</version>
+			<version>${hibernate-search.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.hibernate</groupId>
@@ -110,7 +107,7 @@
 		<dependency>
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-jpdl</artifactId>
-			<version>3.2.2</version>
+			<version>3.2.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -119,28 +116,10 @@
 			</exclusions>
 			<type>jar</type>
 		</dependency>		
-		<!--dependency>
-			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-server-media-mscontrol</artifactId>
-			<version>1.0.0.BETA1</version>			
-			<type>jar</type>			
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-server-media-jar</artifactId>
-			<version>1.0.0.BETA1</version>			
-			<type>jar</type>			
-		</dependency>
-		<dependency>		
-			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1</version>			
-			<type>jar</type>
-		</dependency-->
 		<dependency>
 			<groupId>org.mobicents.external.freetts</groupId>
 			<artifactId>freetts</artifactId>
-			<version>1.0</version>
+			<version>${freetts.version}</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
@@ -193,22 +172,7 @@
 			<plugin>
 				<artifactId>maven-ear-plugin</artifactId>
 				<configuration>
-					<modules>
-						<!--jarModule>
-							<groupId>org.mobicents.servers.media</groupId>
-							<artifactId>mobicents-server-media-mscontrol</artifactId>
-							<bundleDir>lib</bundleDir>														
-						</jarModule>
-						<jarModule>		
-							<groupId>org.mobicents.servers.media</groupId>
-							<artifactId>mobicents-server-media-constants</artifactId>
-							<bundleDir>lib</bundleDir>
-						</jarModule>
-						<jarModule>
-							<groupId>org.mobicents.servers.media</groupId>
-							<artifactId>mobicents-server-media-jar</artifactId>
-							<bundleDir>lib</bundleDir>			
-						</jarModule-->
+					<modules>						
 						<jarModule>
 							<groupId>org.mobicents.external.freetts</groupId>
 							<artifactId>freetts</artifactId>
@@ -317,41 +281,6 @@
 					</jboss>
 				</configuration>
 			</plugin>
-		</plugins>
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
+		</plugins>			
 	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
