--- a/sip-servlets-examples/shopping-demo/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo/web/pom.xml
@@ -8,12 +8,9 @@
 		<artifactId>shopping-demo-parent</artifactId>
 		<version>1.0</version>
 	</parent>
-	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>shopping-demo-web</artifactId>
 	<packaging>war</packaging>
-	<version>1.0</version>
 	<name>Shopping Demo WebApp</name>
-	<url>http://www.mobicents.org-a.googlepages.com/products_sip_servlets.html</url>
 	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
@@ -36,33 +33,33 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- logging dependency -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>${log4j.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging-api</artifactId>
-			<version>1.0.4</version>
+			<version>${commons-logging.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Media dependencies -->
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-mscontrol</artifactId>
-			<version>1.0.0.BETA1</version>
+			<version>1.0.0.BETA1-CP1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-server-media-constants</artifactId>
-			<version>1.0.0.BETA1</version>
+			<version>1.0.0.BETA1-CP1</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- j2ee dependencies -->
@@ -74,7 +71,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-debug</artifactId>
-			<version>2.0.1.GA</version>
+			<version>${jboss-seam.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.jboss.seam</groupId>
@@ -85,7 +82,7 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
-			<version>2.0.1.GA</version>
+			<version>${jboss-seam.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-beanutils</groupId>
@@ -98,88 +95,4 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-	<build>
-		<!--plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<configuration>
-					<filters>
-						<filter>configurations/convergeddemo.properties</filter>
-					</filters>
-					<webResources>
-						<resource>						
-							<directory>
-								src/main/webapp/WEB-INF
-							</directory>
-							<filtering>true</filtering>							
-						</resource>
-					</webResources>
-				</configuration>
-			</plugin>
-		</plugins-->
-		<!--artifactId>maven-antrun-plugin</artifactId>
-			<executions>
-			<execution>
-			<phase>prepare-package</phase>
-			<configuration>
-			<tasks>
-			
-			
-			<move
-			todir="${basedir}/target/media-playback-servlet-1.0/WEB-INF/lib/"
-			includeemptydirs="false" verbose="true">
-			<fileset
-			dir="${basedir}/target/media-playback-servlet-1.0/WEB-INF/lib/">
-			<include name="**/*-1.0.jar" />
-			</fileset>
-			<mapper type="glob" from="*-1.0.jar"
-			to="*.jar" />
-			</move>
-			
-			</tasks>
-			</configuration>
-			<goals>
-			<goal>run</goal>
-			</goals>
-			</execution>
-			</executions>
-			</plugin>		
-			</plugins-->
-		<extensions>
-			<extension>
-				<groupId>org.jvnet.wagon-svn</groupId>
-				<artifactId>wagon-svn</artifactId>
-				<version>RELEASE</version>
-			</extension>
-		</extensions>
-	</build>
-	<!-- repositories -->
-	<repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2/</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>JbossRepository</id>
-			<name>Jboss Repository</name>
-			<url>http://repository.jboss.org/maven2</url>
-		</repository>
-	</repositories>
-
-	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>maven2-repository</id>
-			<url>java-net:/maven2-repository/trunk/www/repository/</url>
-		</repository>
-	</distributionManagement>
 </project>
