--- a/sip-servlets-seam/demo/pom.xml
+++ b/sip-servlets-seam/demo/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.mobicents.servlet.seam</groupId>
 	<artifactId>sip-servlets-seam-demo</artifactId>
 	<version>1.0</version>
-	<name>Sip Servlets Seam Demo Project</name>
+	<name>Sip Servlets Seam Telco Framework Demo Project</name>
 	<packaging>war</packaging>
 	<repositories>
 		<repository>
@@ -88,7 +88,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.seam</groupId>
 			<artifactId>sip-servlets-seam-entrypoint</artifactId>
-			<version>1.0</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
