--- a/sip-servlets-examples/call-blocking/pom.xml
+++ b/sip-servlets-examples/call-blocking/pom.xml
@@ -25,7 +25,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.1-alpha-2</version> 
+				<version>${war.plugin.version}</version> 
 				<configuration>
 					<warSourceDirectory>
 						${basedir}/src/main/sipapp
