--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
         	<artifactId>mobicents</artifactId>
         	<groupId>org.mobicents</groupId>
-        	<version>1.15-SNAPSHOT</version>
+        	<version>1.17-SNAPSHOT</version>
     	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
@@ -83,6 +83,9 @@
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
+		<mobicents.cluster.version>1.3-SNAPSHOT</mobicents.cluster.version>
+		<mobicents.balancer.version>1.0.BETA11-SNAPSHOT</mobicents.balancer.version>
+		<mobicents.jain.sip.ha.version>0.5-SNAPSHOT</mobicents.jain.sip.ha.version>
 	</properties>
 	
 	<dependencies>
